--- a/packages/server/.gitignore
+++ b/packages/server/.gitignore
@@ -5,7 +5,7 @@
 /coverage
 
 # production
-dist
+dist/
 
 # misc
 .DS_Store
@@ -40,7 +40,7 @@ Thumbs.db
 tags
 
 # NPM packages folder.
-node_modules
+node_modules/
 
 # Brunch folder for temporary files.
 tmp/
