--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,10 @@
   "name": "united-states-africa-server",
   "version": "1.0.0",
   "description": "A typescript project",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IfyNdu/united-states-africa"
+  },
   "main": "index.js",
   "scripts": {
     "prepare": "tsc",
@@ -38,6 +42,7 @@
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
     "ts-node": "8.5.4",
+    "tspath": "^1.3.7",
     "uuid": "3.3.3"
   }
 }
