--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
@@ -13,7 +13,10 @@
     "outDir": "dist",
     "paths": {
       "usa-types": [
-        "types/index.ts"
+        "./src/types/index.ts"
+      ],
+      "usa-utils": [
+        "./src/utils/index.ts"
       ]
     },
     "removeComments": true,
