--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.19.0",
-    "tsconfig-paths": "^3.9.0"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0"
+    "lerna": "^3.19.0"
   }
 }
