--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,8 +9,8 @@
   "main": "index.js",
   "scripts": {
     "prepare": "tsc",
-    "start-dev": "DB_HOST=127.0.0.1 DB_USER=root DB_PASSWORD=password DB_NAME=united_states_africa DB_DIALECT=mysql PORT=3000 DB_URL=mysql://root:password@127.0.0.1:3306/united_states_africa nodemon | pino-pretty --colorize -t 'SYS:standard'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "DB_HOST=127.0.0.1 DB_USER=root DB_PASSWORD=password DB_NAME=united_states_africa DB_DIALECT=mysql APP_PORT=6969 DB_URL=mysql://root:password@127.0.0.1:3306/united_states_africa nodemon | pino-pretty --colorize -t 'SYS:standard'",
+    "test": "jest --watch --config=./jest.config.js"
   },
   "author": "Ify Ndu",
   "license": "ISC",
@@ -26,23 +26,25 @@
     "@types/sequelize": "^4.28.8",
     "@types/validator": "^12.0.1",
     "jest": "^24.9.0",
+    "tsconfig-paths": "^3.9.0",
     "ts-jest": "^24.2.0",
     "typescript": "3.7.3"
   },
   "dependencies": {
+    "body-parser": "1.19.0",
     "express": "4.17.1",
-    "express-pino-logger": "^4.0.0",
+    "express-pino-logger": "4.0.0",
     "lodash": "4.17.15",
-    "mysql": "^2.17.1",
-    "mysql2": "^2.0.2",
-    "pino": "^5.14.0",
-    "pino-pretty": "^3.5.0",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.2",
-    "sequelize-cli": "^5.5.1",
-    "sequelize-typescript": "^1.1.0",
+    "mysql": "2.17.1",
+    "mysql2": "2.0.2",
+    "pino": "5.14.0",
+    "pino-pretty": "3.5.0",
+    "reflect-metadata": "0.1.13",
+    "sequelize": "5.21.2",
+    "sequelize-cli": "5.5.1",
+    "sequelize-typescript": "1.1.0",
     "ts-node": "8.5.4",
-    "tspath": "^1.3.7",
+    "tspath": "1.3.7",
     "uuid": "3.3.3"
   }
 }
